--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <form class="d-flex ms-auto">
-                        <a class="btn btn-success btn-lg" data-bs-toggle="modal"
+                        <a href="./home-help-online.html" class="btn btn-success btn-lg" data-bs-toggle="modal"
                             data-bs-target="#nuevoTicketModal">Abrir
                             Ticket</a>
                     </form>
