--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <form class="d-flex ms-auto">
-                        <a href="./home-help-online.html" class="btn btn-success btn-lg" data-bs-toggle="modal"
+                        <a class="btn btn-success btn-lg" data-bs-toggle="modal"
                             data-bs-target="#nuevoTicketModal">Abrir
                             Ticket</a>
                     </form>
@@ -249,8 +249,12 @@
                             <h1>Sistema de Tickets en Linea - CSAP</h1>
                             <p>Si necesita ayuda o tiene problemas con algún equipo, procedimiento o servicio no dude en
                                 buscarnos a través de un ticket.</p>
-                            <a class="btn btn-light btn-lg" data-bs-toggle="modal"
-                                data-bs-target="#nuevoTicketModal">Abrir
+                                <!--
+                                    <a class="btn btn-light btn-lg" data-bs-toggle="modal"
+                                data-bs-target="#nuevoTicketModal" href="./home-help-online.html">Abrir
+                                Ticket</a>
+                                -->
+                            <a class="btn btn-light btn-lg"  href="./home-help-online.html">Abrir
                                 Ticket</a>
                         </div>
                     </div>
