--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es-MX">
 
 <head>
     <meta charset="utf-8">
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/custom-styles.css">
     <link rel="stylesheet" href="./css/styles-index.css">
-
     <script>
         function ocultarDiv(val) {
             if (val == 'con-cdsid') {
@@ -249,12 +248,7 @@
                             <h1>Sistema de Tickets en Linea - CSAP</h1>
                             <p>Si necesita ayuda o tiene problemas con algún equipo, procedimiento o servicio no dude en
                                 buscarnos a través de un ticket.</p>
-                                <!--
-                                    <a class="btn btn-light btn-lg" data-bs-toggle="modal"
-                                data-bs-target="#nuevoTicketModal" href="./home-help-online.html">Abrir
-                                Ticket</a>
-                                -->
-                            <a class="btn btn-light btn-lg"  href="./home-help-online.html">Abrir
+                            <a class="btn btn-light btn-lg" href="./dashboard.html">Abrir
                                 Ticket</a>
                         </div>
                     </div>
@@ -361,34 +355,7 @@
                     aria-labelledby="modalLUSP" aria-hidden="true">
                     <div class="modal-dialog modal-xl">
                         <div class="modal-content">
-                            <div class="modal-body">
-                                <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                                    <div class="container-fluid">
-                                        <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
-                                    </div>
-                                </nav>
-                                <div class="d-flex" id="wrapper">
-                                    <!-- Sidebar-->
-                                    <div class="border-end bg-white" id="sidebar-wrapper">
-                                        <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
-                                        <div class="list-group list-group-flush">
-                                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Dashboard</a>
-                                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Shortcuts</a>
-                                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Overview</a>
-                                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
-                                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-                                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
-                                        </div>
-                                    </div>
-                                    <!-- Page content wrapper-->
-                                    <div id="page-content-wrapper">
-                                        <!-- Page content-->
-                                        <div class="container-fluid">
-                                            <h1>Hello</h1>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-success btn-sm"
                                     data-bs-dismiss="modal">Cerrar</button>
